package com.AppRecrutement.AppRecrutement.model;

public enum StatutCandidature {
    EN_ATTENTE,
    ACCEPTEE,
    REFUSEE
}
