@startuml Diagramme de Classes - AppRecrutement

' Style moderne et épuré
skinparam backgroundColor #FFFFFF
skinparam class {
    BackgroundColor #E3F2FD
    BorderColor #1976D2
    ArrowColor #424242
    FontColor #212121
}
skinparam enum {
    BackgroundColor #FFF3E0
    BorderColor #F57C00
}
skinparam packageStyle rectangle

title Plateforme de Recrutement Intelligente avec IA

package "Gestion des Utilisateurs" #LightGreen {
    
    abstract class Utilisateur {
        - id: Long
        - email: String
        - motDePasse: String
        - nom: String
        - prenom: String
        - role: Role
        - dateInscription: Date
        {abstract} + onCreate()
    }

    class Candidat {
        - telephone: String
        - adresse: String
        - dateNaissance: Date
        - titreProfil: String
        + telechargerCV()
        + consulterOffres()
        + postuler()
    }

    class Recruteur {
        - nomEntreprise: String
        - poste: String
        + publierOffre()
        + consulterCandidatures()
    }

    enum Role {
        CANDIDAT
        RECRUTEUR
        ADMIN
    }
}

package "Profil Candidat" #LightBlue {
    
    class CV {
        - id: Long
        - cheminFichier: String
        - dateTelechargement: Date
        - estPrincipal: Boolean
        - contenuTexte: String
        - statutAnalyse: StatutAnalyse
    }

    class Formation {
        - id: Long
        - diplome: String
        - etablissement: String
        - anneeObtention: Integer
        - specialite: String
    }

    class Experience {
        - id: Long
        - titrePoste: String
        - entreprise: String
        - dateDebut: Date
        - dateFin: Date
        - description: String
    }
}

package "Analyse NLP & IA" #LightYellow {
    
    class ResultatAnalyse {
        - id: Long
        - dateAnalyse: Date
        - tempsExecution: Double
        - precisionScore: Double
    }

    class Competence {
        - id: Long
        - nom: String
        - categorie: String
        - niveauRequis: Integer
    }

    class Recommandation {
        - id: Long
        - titre: String
        - type: TypeRecommandation
        - message: String
    }

    enum StatutAnalyse {
        EN_ATTENTE
        EN_COURS
        TERMINE
        ERREUR
    }

    enum TypeRecommandation {
        FORMATION
        CERTIFICATION
        COMPETENCE_MANQUANTE
    }
}

package "Gestion des Offres" #LightCoral {
    
    class Offre {
        - id: Long
        - titre: String
        - description: String
        - lieu: String
        - typeContrat: TypeContrat
        - statutOffre: StatutOffre
        - datePublication: Date
        - dateExpiration: Date
        - salaireMin: Double
        - salaireMax: Double
    }

    class Scoring {
        - id: Long
        - poidsCompetences: Double
        - poidsExperiences: Double
        - poidsFormations: Double
    }

    enum TypeContrat {
        CDI
        CDD
        STAGE
        FREELANCE
        ALTERNANCE
        SIVP
    }

    enum StatutOffre {
        OUVERTE
        CLOTUREE
        ARCHIVEE
    }
}

package "Candidatures & Matching" #Lavender {
    
    class Candidature {
        - id: Long
        - dateCandidature: Date
        - scoreCompatibilite: Double
        - lettreMotivation: String
        - statut: StatutCandidature
        + onCreate()
    }

    class RapportScoring {
        - id: Long
        - scoreFinal: Double
        - pointsForts: List<String>
        - pointsFaibles: List<String>
    }

    enum StatutCandidature {
        EN_ATTENTE
        ACCEPTEE
        REFUSEE
    }
}

' --- Relations d'héritage ---
Utilisateur <|-- Candidat
Utilisateur <|-- Recruteur

' --- Relations entre packages ---
Candidat "1" *-- "*" CV : possède
Candidat "1" *-- "*" Formation : a
Candidat "1" *-- "*" Experience : a
Candidat "1" *-- "*" Candidature : effectue
Candidat "1" *-- "*" Recommandation : reçoit

Recruteur "1" *-- "*" Offre : publie

CV "1" --> "1" ResultatAnalyse : génère
ResultatAnalyse "1" *-- "*" Competence : identifie

Offre "1" *-- "*" Competence : requiert
Offre "1" *-- "*" Candidature : reçoit
Offre "1" *-- "*" Scoring : utilise

Candidature "1" --> "1" RapportScoring : génère
Candidature "*" --> "1" Candidat : appartient à
Candidature "*" --> "1" Offre : concerne

Scoring "*" --> "1" Offre : configuré pour

Competence "*" --> "*" Offre : requise pour

' --- Notes explicatives ---
note right of ResultatAnalyse
  **Moteur NLP**
  Analyse automatique
  des CV pour extraire
  les compétences clés
end note

note right of Candidature
  **Matching Intelligent**
  Calcul automatique du
  score de compatibilité
  candidat/offre
end note

note right of Recommandation
  **Recommandations IA**
  Suggestions personnalisées
  pour améliorer le profil
  et augmenter les chances
end note

note bottom of Utilisateur
  **Héritage JOINED**
  Stratégie d'héritage
  pour séparer Candidat
  et Recruteur
end note

@enduml
